jlamontSC-test/src/objects/Advancement_Notes__c.object
<CustomObject>
    <description>Notes object used by Advancement to capture notes such as Research, Emails, Estate, Planned Giving, Strategy Plan, and Other.  This information was previously captured in the GAIA Notes table.</description>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Career_Financial_History__c</fullName>
        <label>Career/Financial History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_History__c</fullName>
        <label>Contact History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact for which the notes are about</description>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Household_Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advancement Notes</relationshipLabel>
        <relationshipName>Research_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTNote__c</fullName>
        <label>DTNote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocLink__c</fullName>
        <label>DocLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electoral_Politics__c</fullName>
        <description>REMEMBER, we may NOT use FEC information (Federal Elections Commission): these are lists donors of $250 or more to a candidate for a federal office, including Congress, Senate and President. 

http://cal-access.ss.ca.gov/ 
We may use this for California political donor info. 

We may use I.R.S. information on donors to 527 organizations. Includes name(s), city, occupation, employer of donor, and name(s) of organizations supported and the amount and date of donation. (mostly out of date now) 

We may also use news articles that list donors to certain candidates (that information probably came from FEC lists, but we can quote the news article as source).</description>
        <inlineHelpText>REMEMBER, we may NOT use FEC information (Federal Elections Commission): these are lists donors of $250 or more to a candidate for a federal office, including Congress, Senate and President.</inlineHelpText>
        <label>Electoral Politics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environmental_Interests__c</fullName>
        <label>Environmental Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gift_History__c</fullName>
        <label>Gift History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Giving_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Giving Proposal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Advancement Notes</relationshipLabel>
        <relationshipName>Advancement_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household/Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advancement Notes</relationshipLabel>
        <relationshipName>Advancement_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internet_Search_Engines__c</fullName>
        <inlineHelpText>Internet Search Engines: www.Google.com – search combinations of all known names and businesses; follow up on appropriate hits.</inlineHelpText>
        <label>Internet Search Engines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Note</fullName>
                </value>
                <value>
                    <fullName>Additional Phones &amp; Email</fullName>
                </value>
                <value>
                    <fullName>Bio Profile/Research</fullName>
                </value>
                <value>
                    <fullName>Career/Financial History</fullName>
                </value>
                <value>
                    <fullName>Club Connect/History</fullName>
                </value>
                <value>
                    <fullName>Coding Change</fullName>
                </value>
                <value>
                    <fullName>Contacts, Alt &amp; Bus Addr</fullName>
                </value>
                <value>
                    <fullName>CRC Strategy</fullName>
                </value>
                <value>
                    <fullName>Cultivation/Solicitation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Event Profile</fullName>
                </value>
                <value>
                    <fullName>Gift History Change</fullName>
                </value>
                <value>
                    <fullName>Gift Planning</fullName>
                </value>
                <value>
                    <fullName>Internal Use Only</fullName>
                </value>
                <value>
                    <fullName>Philanthropic/Other Interest</fullName>
                </value>
                <value>
                    <fullName>Planned Giving</fullName>
                </value>
                <value>
                    <fullName>Political Giving</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Strategy Plan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Giving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Giving</label>
        <referenceTo>rC_Giving__Planned_Giving__c</referenceTo>
        <relationshipLabel>Advancement Notes</relationshipLabel>
        <relationshipName>Advancement_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Report_Goal__c</fullName>
        <description>Determine the Goal of this research report: (summary of what is known;  identify interest in the organization, qualify as a major donor, determine if person is still living, determine if corporation has a community support 
program, etc.)</description>
        <inlineHelpText>Determine the Goal of this research report: (summary of what is known;  identify interest in the organization, qualify as a major donor, determine if person is still living, determine if corporation has a community support</inlineHelpText>
        <label>Research Report Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sierra_Club_History__c</fullName>
        <label>Sierra Club History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Advancement Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Note_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Note_Type__c</columns>
        <columns>Household_Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Giving_Proposal__c</columns>
        <columns>Planned_Giving__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Advancement_Notes_All</fullName>
        <columns>NAME</columns>
        <columns>Note_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Note_Type__c</columns>
        <columns>Household_Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Giving_Proposal__c</columns>
        <columns>Planned_Giving__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Advancement Notes-All</label>
    </listViews>
    <listViews>
        <fullName>My_General_Advancement_Notes</fullName>
        <columns>NAME</columns>
        <columns>Note_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Note_Type__c</columns>
        <columns>Household_Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Giving_Proposal__c</columns>
        <columns>Planned_Giving__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Advancement_Notes__c.General</value>
        </filters>
        <label>My General Advancement Notes</label>
    </listViews>
    <listViews>
        <fullName>My_Research_Advancement_Notes</fullName>
        <columns>NAME</columns>
        <columns>Note_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Note_Type__c</columns>
        <columns>Household_Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Giving_Proposal__c</columns>
        <columns>Planned_Giving__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Advancement_Notes__c.Research</value>
        </filters>
        <label>My Research Advancement Notes</label>
    </listViews>
    <nameField>
        <label>Advancement Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advancement Notes</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research</fullName>
        <active>true</active>
        <label>Research</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_required_for_other_note_type</fullName>
        <active>true</active>
        <description>An advancement note of record type General and note type of Other must have a description</description>
        <errorConditionFormula>RecordType.Name =&apos;General&apos; &amp;&amp;   ISPICKVAL(Note_Type__c, &apos;Other&apos;) &amp;&amp; Isblank(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>You must enter a description for notes of type &apos;Other&apos;.</errorMessage>
    </validationRules>
</CustomObject>